# flask-test-app

./: posts.db  pyproject.toml
database/: db.py  db_init.py
flask_project/: app.py
flask_project/templates/: 404.html  base.html  form.html  home.html  posts.html
